# zero2hello

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clean_cmake.sh  cmake-build.sh  cmake-gen.sh  flash_script.jlink  linker.ld  main.c  makefile  run_cmake.sh  startup.c
cmake/: STM32F103xx_HAL_PARA.cmake  gcc-arm-none-eabi.cmake  include_list.cmake  source_list.cmake
drivers/core/inc/: core_cm3.h  nvic.h  scb.h  systick.h  utils.h
drivers/inc/: afio_driver.h  clock_driver.h  core_peripherals.h  exti_driver.h  gpio_driver.h  l_clk_cfg.h  l_core.h  l_gpio.h  l_stdint.h  l_stm32f103rb.h  l_utils.h  mcu_peripherals.h  rcc_clk_cfg.h  rcc_driver.h  spi.driver.h  spi_driver.h  stdint.h  usart_driver.h  utils.h
drivers/src/: afio_driver.c  clock_driver.c  exti_driver.c  gpio.driver.c  gpio_driver.c  l_clk_cfg.c  l_gpio.c  rcc_driver.c  spi_driver.c  usart_driver.c
inc/: main_cfg.h
modules/inc/: console.h  led.h  module.h  ttys.h
modules/src/: console.c  ttys.c
snippets/inc/: user_snippets.h
snippets/src/: user_snippets.c
src/: main.c  startup.c
stdlib/inc/: _string.h  syscalls.h
stdlib/src/: _string.c  syscalls.c
user_app/inc/: main_cfg.h
user_app/src/: main.c
utilities/inc/: user_utilities.h
utilities/src/: user_utilities.c
